Add Rest API to get availability zone list
